python-test_driven_development/tests/0-add_integer.txt
>>> add_integer = __import__("0-add_integer").add_integer

>>> add(5, 10)
5

>>> add(1000, 50)
1050

>>> add(5.0, 5)
10

>>> add(10, 1.25)
11

>>> add({}, 5)
Traceback (most recent call last):
...
TypeError: a must be an integer

>>> add(10,{})
Traceback (most recent call last):
...
TypeError: b must be an integer

>>> add('H', 5)
Traceback (most recent call last):
...
TypeError: a must be an integer

>>> add(10, 'A')
Traceback (most recent call last):
...
TypeError: b must be an integer

>>> add(None, 5)
Traceback (most recent call last):
...
TypeError: a must be an integer

>>> add(10, None)
Traceback (most recent call last):
...
TypeError: b must be an integer
